--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -29,6 +29,7 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/mapped-types": "^2.1.0",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/cli": "^11.0.0",
     "@prisma/client": "^6.16.2",
     "prisma": "^6.16.2",
     "reflect-metadata": "^0.2.2",
