--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -33,7 +33,9 @@
     "@prisma/client": "^6.16.2",
     "prisma": "^6.16.2",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "@types/node": "^22.10.7",
+    "typescript": "^5.7.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
